--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "[![Actions Status](https://github.com/ildarjans/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/ildarjans/frontend-project-lvl2/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "bin": {
     "gendiff": "bin/gendiff.js"
@@ -21,12 +23,17 @@
   },
   "homepage": "https://github.com/ildarjans/frontend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^8.1.0"
+    "commander": "^8.1.0",
+    "debug": "^4.3.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@jest/globals": "^27.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "lodash": "^4.17.21"
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.1.0",
+    "jest-cli": "^27.1.0"
   }
 }
